# vanmas

./: .gitignore  CrewAI_Output_from_VanMas_proj.docx  README.md  pyproject.toml
src/van-mas-proj/: report.md
src/van-mas-proj/config/: tasks.yaml
src/van_mas/config/: agents.yaml
src/van_mas_proj/: crew.py  main.py
src/van_mas_proj/config/: agents.yaml  tasks.yaml
src/vanmas/: crew.py  main.py
src/vanmas/config/: agents.yaml  tasks.yaml
