[project]
name = "van_mas_proj"
version = "0.1.0"
description = "van_mas_proj using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2,<1.0.0"
]

[project.scripts]
van_mas_proj = "van_mas_proj.main:run"
run_crew = "van_mas_proj.main:run"
train = "van_mas_proj.main:train"
replay = "van_mas_proj.main:replay"
test = "van_mas_proj.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
